# ai-agentmesh

./: .env.example  .gitignore  CAPABILITIES_AND_NEXT_PHASE.md  DEVELOPMENT_PLAN.md  O2_SMOKE_TEST.md  PITCH.md  README.md  TODO.md  TODO_NEXT_MVP.md  app.html  pyproject.toml
agentmesh/: __init__.py  acquisition.py  agent_registry.py  agents.py  app.py  auth.py  brief_templates.py  chat_skills.py  datasources.py  documents.py  env.py  intent.py  llm.py  model_registry.py  models.py  o2.py  permissions.py  risk.py  seed.py  store.py  synthesis.py  tools.py  web_research.py
agentmesh/routes/: __init__.py  agents.py  auth.py  blackboard.py  chat.py  data_sources.py  deps.py  documents.py  health.py  inbox.py  memory.py  risk.py  users.py  workspace.py
agentmesh/service_agents/: __init__.py  data.py  risk.py
docs/adr/: 0001-retrieval-vector-search.md  0002-records-store-relational-migration.md
docs/superpowers/plans/: 2026-06-29-agentmesh-productization-plan.md
eval/: dataset.py  metrics.py  results.json  run_eval.py
tests/: conftest.py  test_chat_flow.py  test_datasources.py  test_documents.py  test_eval_metrics.py  test_health.py  test_intent.py  test_multiturn.py  test_o2.py  test_oauth.py  test_pdf.py  test_permissions.py  test_risk.py  test_web_research.py
